--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body{
   border: solid 10px white;
   position: relative;
 }
+
 .title{
   color: white;
   position: absolute;
@@ -39,8 +40,10 @@ body{
 
 .title h3{
   padding-top: 30px;
+  font-size: 1.5em;
 }
 
+/* navbar */
 nav{
   /* padding: 20px; */
   text-align: center;
@@ -76,7 +79,7 @@ header li:hover{
 
 /* columns */
  aside{
-  width: 30%;
+  width: 20%;
   float: left;
   border-radius: 1%;
 /* debug */
@@ -84,14 +87,22 @@ header li:hover{
  background-color: #e9c46a;
 }
 
+/* main */
  main{
-  width: 38%;
+  width: 50%;
   float: left;
   border-radius: 1%;
-/* debug */
- margin: 0 1%;
- height: 400px;
- background-color: #f4a261;
+  margin:0 5%;
+  background-color: white
+}
+
+main h2{
+  padding: 15px;
+}
+
+main p{
+ padding: 20px;
+ font-size: 1.2em;
 }
 
 .widget{
