--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,6 @@ header li:hover{
   width: 20%;
   float: left;
   border-radius: 1%;
-/* debug */
- height: 300px;
- background-color: #e9c46a;
 }
 
 /* main */
@@ -106,10 +103,19 @@ main p{
 }
 
 .widget{
+  margin-bottom: 20px;
   width: 100%;
   border-radius: 1%;
-/* debug */
- height: 200px;
+  background-color: white;
+}
+
+.widget h2{
+  padding: 15px;
+}
+
+.widget p{
+ padding: 20px;
+ font-size: 1.2em;
 }
 
 /* footer */
