--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
 
 /* header */
 header{
-  font-family: 'Maven Pro', sans-serif;
+  font-family: 'Cinzel', serif;
 }
 
 .logo-title{
@@ -119,8 +119,6 @@ header li:hover{
   text-decoration: none;
 }
 
-
-
 /* main */
  main{
   width: 50%;
@@ -160,7 +158,40 @@ main p{
 
 /* footer */
 footer{
- height: 150px;
-/* debug */
- background: #e76f51;
+  height: 150px;
+ background: white;
+}
+
+.footer-nome{
+  font-family: 'Dancing Script', cursive;
+  text-align: center;
+  padding: 3px;
+  border-bottom: solid 2px black;
+  width: 99%;
+  height: 20%;
+}
+
+.footer-img{
+  height: 80%;
+}
+
+.div-img{
+  height: 100%;
+  width: 30%;
+  display: inline-block;
+  position: relative;
+}
+
+.div-img img{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 30%;
+}
+
+.div-img:hover img{
+  opacity: 100%;
 }
