--- a/css/style.css
+++ b/css/style.css
@@ -95,17 +95,24 @@ header li:hover{
   position: relative;
 }
 
+.aside-sx {
+  padding: 5px;
+}
+
 .aside-sx img{
+  float: left;
   width: 20px;
   height: 20px;
 }
 
 .aside-sx h2{
+  float: left;
   color: #7b7676;
   display: inline-block;
 }
 
 .aside-sx ul{
+  float: left;
   padding: 3px;
   list-style-type: none;
 }
@@ -158,8 +165,9 @@ main p{
 
 /* footer */
 footer{
-  height: 150px;
+ height: 150px;
  background: white;
+ border-radius: 1%;
 }
 
 .footer-nome{
@@ -167,7 +175,7 @@ footer{
   text-align: center;
   padding: 3px;
   border-bottom: solid 2px black;
-  width: 99%;
+  width: 100%;
   height: 20%;
 }
 
@@ -177,7 +185,7 @@ footer{
 
 .div-img{
   height: 100%;
-  width: 30%;
+  width: 33%;
   display: inline-block;
   position: relative;
 }
